fix: some fix and readme